taiga-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-taiga
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  
spec:
  rules:
  - host: taiga.beta.numerique.gouv.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taiga
            port:
              number: 80
  tls:
  - hosts:
    - taiga.beta.numerique.gouv.fr
    secretName: beta-numerique-tls
